KNOWN ISSUES:

- Grenadier bombs resolve to DC 0 under multiplayer
- Tiefling needs better race pictures

CHANGES:

- added Banishment, Ensnaring and Staggering Smite spells
- added Oath of Ancient subclass
- added level 13th Oath spells to support Level 20 feature
- improved Merciless gui presentation
- improved translation terms
- included Raise Skeleton spells on selection lists